--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "inhabit-module-test",
+  "name": "inhabit-module-test-module",
   "version": "0.1.0",
-  "description": "TestDescription",
+  "description": "TestModule description",
   "keywords": [
     "inhabit"
   ],
@@ -11,7 +11,7 @@
     "watch": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "TestAuthor",
+  "author": "TestModuleAuthor",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.14.0",
